cluster/apps/default/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name bazarr
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: *name
          image: ghcr.io/k8s-at-home/bazarr:v1.0.4
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
          ports:
            - name: &port http
              protocol: TCP
              containerPort: 6767
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
            - name: bazarr-media
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: bazarr-media
          persistentVolumeClaim:
            claimName: shared-media
